[gd_scene format=3 uid="uid://cf0bj5upnbrvh"]

[ext_resource type="Theme" uid="uid://3q7s11gs73j1" path="res://resources/themes/nox.tres" id="1_ilkrf"]
[ext_resource type="Script" uid="uid://cmp1brggjoun1" path="res://interface/screens/auth_portal.gd" id="2_11yo7"]
[ext_resource type="Texture2D" uid="uid://x4bwl6023e2n" path="res://icons/branding/logo_transparent.png" id="3_vmcj0"]
[ext_resource type="FontFile" uid="uid://cx331ifa13k0d" path="res://resources/fonts/lexend/Lexend-Black.ttf" id="4_gfcr8"]

[node name="AuthPortal" type="Control" unique_id=2098146816]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
theme = ExtResource("1_ilkrf")
script = ExtResource("2_11yo7")

[node name="Contents" type="VBoxContainer" parent="." unique_id=1193535830]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Username" type="VBoxContainer" parent="Contents" unique_id=1191441619]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/Username" unique_id=1667510782]
layout_mode = 2
text = "Username"

[node name="LineEdit" type="LineEdit" parent="Contents/Username" unique_id=1488185156]
layout_mode = 2
placeholder_text = "Username"
max_length = 32

[node name="Error" type="Label" parent="Contents/Username" unique_id=592435309]
visible = false
modulate = Color(0.88, 0.21472001, 0.1672, 1)
layout_mode = 2
text = "Invalid username!"
horizontal_alignment = 1

[node name="Password" type="VBoxContainer" parent="Contents" unique_id=899069329]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/Password" unique_id=1119565572]
layout_mode = 2
text = "Password"

[node name="Label2" type="Label" parent="Contents/Password" unique_id=53685684]
modulate = Color(1, 1, 1, 0.5294118)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "It's HIGHLY recommended to use a strong
password and USE A PASSWORD MANAGER.
If you lose access to this password, you will
lose access to your per-server data."

[node name="LineEdit" type="LineEdit" parent="Contents/Password" unique_id=1868956123]
layout_mode = 2
placeholder_text = "Password"
max_length = 128
virtual_keyboard_type = 6
secret = true

[node name="Error" type="Label" parent="Contents/Password" unique_id=1787229792]
visible = false
modulate = Color(0.88, 0.21472001, 0.1672, 1)
layout_mode = 2
text = "Invalid password!"
horizontal_alignment = 1

[node name="PinCode" type="VBoxContainer" parent="Contents" unique_id=762417351]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/PinCode" unique_id=372439649]
layout_mode = 2
text = "PIN Code"

[node name="PinRegLabel" type="Label" parent="Contents/PinCode" unique_id=728830117]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.5294118)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "You will need to enter this code every time
you start the app. Your PIN code can be
changed at any time using your password."

[node name="LineEdit" type="LineEdit" parent="Contents/PinCode" unique_id=8174878]
layout_mode = 2
placeholder_text = "PIN Code"
max_length = 16
virtual_keyboard_type = 2
secret = true

[node name="Error" type="Label" parent="Contents/PinCode" unique_id=1072274570]
visible = false
modulate = Color(0.88, 0.21472001, 0.1672, 1)
layout_mode = 2
text = "PIN must be 4-16 digits."
horizontal_alignment = 1

[node name="PinConfirm" type="VBoxContainer" parent="Contents" unique_id=1283286526]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/PinConfirm" unique_id=1436596201]
layout_mode = 2
text = "Confirm PIN"

[node name="LineEdit" type="LineEdit" parent="Contents/PinConfirm" unique_id=1899179132]
layout_mode = 2
placeholder_text = "Confirm PIN"
max_length = 32
secret = true

[node name="Error" type="Label" parent="Contents/PinConfirm" unique_id=1955694162]
visible = false
modulate = Color(0.88, 0.21472001, 0.1672, 1)
layout_mode = 2
text = "PIN codes do not match!"
horizontal_alignment = 1

[node name="AutoUpdate" type="CheckButton" parent="Contents" unique_id=2143258135]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Automatically check for
 updates from GitHub"

[node name="PreRelease" type="CheckButton" parent="Contents" unique_id=584354286]
unique_name_in_owner = true
layout_mode = 2
text = "Include pre-release builds"

[node name="HBoxContainer" type="HBoxContainer" parent="Contents" unique_id=1013330498]
layout_mode = 2
alignment = 1

[node name="SubmitButton" type="Button" parent="Contents/HBoxContainer" unique_id=70700275]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"Button_Important"
text = "Create Local Account"

[node name="HelpButton" type="Button" parent="Contents/HBoxContainer" unique_id=571571120]
visible = false
layout_mode = 2
tooltip_text = "Bonfire does not rely on external servers for authentication.
All of your data is stored locally, and as such, you are responsible for remembering login details."
text = "?"

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=567377164]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -161.5
offset_top = -100.0
offset_right = 161.5
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer" unique_id=197322146]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_vmcj0")
expand_mode = 1

[node name="Label" type="Label" parent="HBoxContainer" unique_id=658374468]
layout_mode = 2
theme_override_colors/font_color = Color(0.84705883, 0.92941177, 1, 1)
theme_override_fonts/font = ExtResource("4_gfcr8")
theme_override_font_sizes/font_size = 44
text = "BONFIRE"

[node name="Label" type="Label" parent="." unique_id=1650606551]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.0
offset_top = 100.0
offset_right = 61.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 27
text = "Welcome to Bonfire."

[connection signal="toggled" from="Contents/AutoUpdate" to="." method="_on_auto_update_toggled"]
[connection signal="toggled" from="Contents/PreRelease" to="." method="_on_pre_release_toggled"]
[connection signal="pressed" from="Contents/HBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
